# asi

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.core  GUIDELINES.md  INSTRUCTIONS.md  LICENSE  MODULE_PROTOCOL.md  README.md  SECURITY.md  TODO.md  justfile  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/core/: Cargo.toml
apps/core/src/: agent.rs  agent_lifecycle.rs  config.rs  error.rs  events.rs  health.rs  lib.rs  logging.rs  main.rs  protocol.rs  scheduler.rs  shutdown.rs  state.rs
apps/core/src/agents/: intent_judge.rs  mod.rs  orchestrator.rs
apps/core/src/memory/: manager.rs  mod.rs  schema.rs  semantic.rs  session.rs
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/agents/: diagnostic.rs  intent_judge.rs  mod.rs  supervisor.rs  system_manager.rs
apps/desktop/src-tauri/src/assimilation/: adapter.rs  analyzer.rs  bridge_gen.rs  dependency.rs  mod.rs  planner.rs  registry.rs  splitter.rs  static_analysis.rs
apps/desktop/src-tauri/src/bridge/: event_bus.rs  fs_api.rs  mod.rs
apps/desktop/src-tauri/src/cli/: mod.rs
apps/desktop/src-tauri/src/core/: memory_manager.rs  mod.rs  orchestrator.rs  tool_registry.rs  wasm_compile.rs  wasm_sandbox.rs
apps/desktop/src-tauri/src/db/: audit.rs  backup.rs  edge_history.rs  embeddings.rs  fts.rs  mod.rs  performance.rs  schema.rs  sessions.rs  strategic_memory.rs
apps/desktop/src-tauri/src/llm/: bench.rs  cache.rs  claude.rs  cloud_ratelimit.rs  context_manager.rs  fallback.rs  health.rs  hybrid.rs  mod.rs  prompt_cache.rs  prompts.rs  security.rs  stream.rs  tools.rs  usage.rs
apps/desktop/src-tauri/src/mcp/: client.rs  mod.rs  registry.rs  server.rs
apps/desktop/src-tauri/src/nlu/: ab_test.rs  analytics.rs  cache.rs  context.rs  custom.rs  i18n.rs  intent.rs  mod.rs  ner.rs  pipeline.rs  prompts.rs  repair.rs  sentiment.rs  slot.rs  threshold.rs
apps/desktop/src-tauri/src/rag/: attribution.rs  cache.rs  chunker.rs  context.rs  eval.rs  feedback.rs  indexer.rs  mod.rs  pipeline.rs  pruning.rs  xref.rs
apps/desktop/src-tauri/src/security/: audit.rs  encryption.rs  keyring.rs  mod.rs  quarantine.rs  signing.rs
apps/desktop/src-tauri/src/server/: mod.rs
apps/desktop/src-tauri/src/skill/: bridge.rs  deps.rs  evolution.rs  executor.rs  export.rs  market.rs  (+8 more)
apps/desktop/src-tauri/tests/: concurrent_agents.rs  llm_fallback_chain.rs  mcp_server_client.rs  mod.rs  nlu_tests.rs  rag_pipeline.rs  security_chain.rs  self_healing_loop.rs  wasm_sandbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/modules/supertonic/: manifest.md
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/agents/: diagnostic.rs  document_analyst.rs  hardware.rs  intent_judge.rs  market_analyst.rs  mod.rs  supervisor.rs  system_manager.rs  voice_handler.rs
src-tauri/src/agents/document_analyst/: mod.rs  rag.rs  reader.rs
src-tauri/src/agents/hardware/: gpio.rs  mod.rs  relay.rs  sensor.rs
src-tauri/src/agents/market_analyst/: indicators.rs  mod.rs  signal.rs  ws.rs
src-tauri/src/agents/voice_handler/: audio.rs  mod.rs  stt.rs  tts.rs  wake_word.rs
src-tauri/src/assimilation/: adapter.rs  analyzer.rs  cloner.rs  mod.rs  pipeline.rs  registry.rs  rollback.rs  splitter.rs
src-tauri/src/bridge/: command_router.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/core/: memory_manager.rs  mod.rs  orchestrator.rs  self_healing.rs  tool_registry.rs  wasm_sandbox.rs
src-tauri/src/core/self_healing/: git.rs  log_analyzer.rs  mod.rs  patch.rs
src-tauri/src/db/: edge_history.rs  embeddings.rs  mod.rs  schema.rs  strategic_memory.rs
src-tauri/src/llm/: claude.rs  context_manager.rs  mod.rs  ollama.rs
src-tauri/src/mcp/: client.rs  server.rs
src-tauri/src/security/: encryption.rs  keyring.rs  mod.rs
src-tauri/src/skill/: executor.rs
(+318 files in other folders)
